test/corpus/routes.txt
==================
Test Routing rules
==================

route {
    pname(steam) -> direct
    # support complex rules composition
    domain(keyword: youtube) && domain(geoip:google) -> proxy
    !domain(geoip:cn) -> proxy
}

---

(source_file
  (block
    name: (identifier)
    (rules
      (expression
        (function_call
          function_name: (identifier)
          argument: (identifier)))
      destination: (identifier))
    (comment)
    (rules
      (expression
        (function_call
          function_name: (identifier)
          argument: (key_value
            key: (identifier)
            value: (identifier)))
        (logic_operator)
        (function_call
          function_name: (identifier)
          argument: (key_value
            key: (identifier)
            value: (identifier))))
      destination: (identifier))
    (rules
      (expression
        (function_call
          function_name: (identifier)
          argument: (key_value
            key: (identifier)
            value: (identifier))))
      destination: (identifier))))
